.provarCaches/00D5f000005vwGkEAI/objects/rstk__soproddist__c.object
<CustomObject>
    <description>soproddist__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soproddist_order__r.rstk__externalid__c  &amp; &apos;_&apos; &amp;  rstk__soproddist_salesacct__r.rstk__syacc_mfgacct__c</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soproddist_comments__c</fullName>
        <description>Optional comments field. (DD)</description>
        <inlineHelpText>Optional user-defined comments regarding this Account Distribution record</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soproddist_order__c</fullName>
        <description>Master/Detail Lookup to the Product Master. (DD)</description>
        <inlineHelpText>This field value define the Product name , default to display current Product Master record and disable for user input</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Product Account Distriubution</relationshipLabel>
        <relationshipName>soproddists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soproddist_pct__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Identifies the portion of the total sales amount that is to go to the corresponding sales account. (DD)</description>
        <inlineHelpText>The percentage (or portion) of the total Sales amount to be charged (distributed) to the given Sales Account</inlineHelpText>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__soproddist_salesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the Sales Account which will be used for the specified percentage of the total sale. (DD)</description>
        <inlineHelpText>The Sub-Ledger Sales Account for this Account Distribution record</inlineHelpText>
        <label>Sales Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Product Account Distriubution</relationshipLabel>
        <relationshipName>soproddists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soproddist_seq__c</fullName>
        <inlineHelpText>Auto-assigned sequence number, denoting the order in which additional Account Distribution records are added</inlineHelpText>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Product Account Distriubution</label>
    <listViews>
        <fullName>rstk__RS_Product_Account_Distriubution</fullName>
        <columns>NAME</columns>
        <columns>rstk__soproddist_order__c</columns>
        <columns>rstk__soproddist_seq__c</columns>
        <columns>rstk__soproddist_salesacct__c</columns>
        <columns>rstk__soproddist_pct__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Product Account Distriubution</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SOPRODDIST Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Account Distriubution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__sales_acct_is_required</fullName>
        <active>true</active>
        <description>Sales account is required and is not modifiable</description>
        <errorConditionFormula>ISBLANK( rstk__soproddist_salesacct__c ) ||(!ISNEW() &amp;&amp;  ISCHANGED(rstk__soproddist_salesacct__c ) )</errorConditionFormula>
        <errorMessage>Sales account is required and is not modifiable</errorMessage>
    </validationRules>
</CustomObject>